// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Reference render with no data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="searchBox"
      >
        <div
          class="TextInput--main search"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-icon bp3-icon-search StyledProps--main"
              icon="search"
            >
              <svg
                data-icon="search"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  search
                </desc>
                <path
                  d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <input
              class="bp3-input"
              placeholder="search"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-left-medium StyledProps--margin-right-xsmall"
          >
            secret.labelSecretType
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main selectButton StyledProps--inline Button--with-current-color Button--without-shadow"
                  style="width: 60px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secret.labelText
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tabsContainer"
    >
      <div
        class="bp3-tabs bp3-vertical Tabs--main Tabs--vertical"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_selectScope_account"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="account"
            id="bp3-tab-title_selectScope_account"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--padding-medium"
            >
              <span
                class="bp3-icon bp3-icon-layers StyledProps--main iconMargin"
                icon="layers"
              >
                <svg
                  data-icon="layers"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    layers
                  </desc>
                  <path
                    d="M.55 4.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5a.998.998 0 00-.06-1.81L8.4.08a1.006 1.006 0 00-.79 0l-6.99 3a.992.992 0 00-.07 1.81zM15 10c-.16 0-.31.04-.45.11L8 13.38 1.45 10.1c-.14-.06-.29-.1-.45-.1-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1zm0-3.5c-.16 0-.31.04-.45.11L8 9.88 1.45 6.61A.997.997 0 001 6.5c-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              account
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_selectScope_account"
          class="bp3-tab-panel"
          id="bp3-tab-panel_selectScope_account"
          role="tabpanel"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge StyledProps--flex StyledProps--flex-align-center-center"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              secret.noSecretsFound
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main applyButton bp3-popover-dismiss StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          entityReference.apply
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Secret Reference render with no secret type 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="searchBox"
      >
        <div
          class="TextInput--main search"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-icon bp3-icon-search StyledProps--main"
              icon="search"
            >
              <svg
                data-icon="search"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  search
                </desc>
                <path
                  d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <input
              class="bp3-input"
              placeholder="search"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-left-medium StyledProps--margin-right-xsmall"
          >
            secret.labelSecretType
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main selectButton StyledProps--inline Button--with-current-color Button--without-shadow"
                  style="width: 60px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secret.labelText
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tabsContainer"
    >
      <div
        class="bp3-tabs bp3-vertical Tabs--main Tabs--vertical"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_selectScope_account"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="account"
            id="bp3-tab-title_selectScope_account"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--padding-medium"
            >
              <span
                class="bp3-icon bp3-icon-layers StyledProps--main iconMargin"
                icon="layers"
              >
                <svg
                  data-icon="layers"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    layers
                  </desc>
                  <path
                    d="M.55 4.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5a.998.998 0 00-.06-1.81L8.4.08a1.006 1.006 0 00-.79 0l-6.99 3a.992.992 0 00-.07 1.81zM15 10c-.16 0-.31.04-.45.11L8 13.38 1.45 10.1c-.14-.06-.29-.1-.45-.1-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1zm0-3.5c-.16 0-.31.04-.45.11L8 9.88 1.45 6.61A.997.997 0 001 6.5c-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              account
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_selectScope_account"
          class="bp3-tab-panel"
          id="bp3-tab-panel_selectScope_account"
          role="tabpanel"
        >
          <div
            class="referenceList"
          >
            <div
              class="listItem listItem"
            >
              <div
                class="item"
              >
                <span
                  class="bp3-icon StyledProps--main secretIcon"
                  data-icon="text"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 16 19"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.585 18.334H4.467v-.667c.371-.135 1.916-1.009 2.356-1.076V1.667H2.947L1.3 5.14H.667c-.051-.338 0-4.469 0-4.807h14.718c0 .338.05 4.452 0 4.807h-.658L13.13 1.667H9.255V16.59c.439.084 1.976.924 2.33 1.076v.666z"
                      fill="#3E7BFA"
                    />
                  </svg>
                </span>
                <div>
                  <div>
                    text1
                  </div>
                  <div
                    class="meta"
                  >
                    text1
                     . 
                    vault1
                  </div>
                </div>
              </div>
              <span
                class="bp3-icon StyledProps--main iconCheck"
                data-icon="pipeline-approval"
              >
                <svg
                  height="16"
                  viewBox="0 0 19 17"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.81.669l.006.004.015.013a.5.5 0 01.062.7L6.479 16.375a.5.5 0 01-.709.062.52.52 0 01-.136-.176.523.523 0 01-.126-.095L.132 10.578a.5.5 0 01.005-.698l.017-.018a.5.5 0 01.707-.005l.007.007 5.233 5.367L18.107.735a.5.5 0 01.704-.066z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main applyButton bp3-popover-dismiss StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          entityReference.apply
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Secret Reference render with secret type file 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="searchBox"
      >
        <div
          class="TextInput--main search"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-icon bp3-icon-search StyledProps--main"
              icon="search"
            >
              <svg
                data-icon="search"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  search
                </desc>
                <path
                  d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <input
              class="bp3-input"
              placeholder="search"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="tabsContainer"
    >
      <div
        class="bp3-tabs bp3-vertical Tabs--main Tabs--vertical"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_selectScope_account"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="account"
            id="bp3-tab-title_selectScope_account"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--padding-medium"
            >
              <span
                class="bp3-icon bp3-icon-layers StyledProps--main iconMargin"
                icon="layers"
              >
                <svg
                  data-icon="layers"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    layers
                  </desc>
                  <path
                    d="M.55 4.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5a.998.998 0 00-.06-1.81L8.4.08a1.006 1.006 0 00-.79 0l-6.99 3a.992.992 0 00-.07 1.81zM15 10c-.16 0-.31.04-.45.11L8 13.38 1.45 10.1c-.14-.06-.29-.1-.45-.1-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1zm0-3.5c-.16 0-.31.04-.45.11L8 9.88 1.45 6.61A.997.997 0 001 6.5c-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              account
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_selectScope_account"
          class="bp3-tab-panel"
          id="bp3-tab-panel_selectScope_account"
          role="tabpanel"
        >
          <div
            class="referenceList"
          >
            <div
              class="listItem listItem"
            >
              <div
                class="item"
              >
                <span
                  class="bp3-icon StyledProps--main secretIcon"
                  data-icon="text"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 16 19"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.585 18.334H4.467v-.667c.371-.135 1.916-1.009 2.356-1.076V1.667H2.947L1.3 5.14H.667c-.051-.338 0-4.469 0-4.807h14.718c0 .338.05 4.452 0 4.807h-.658L13.13 1.667H9.255V16.59c.439.084 1.976.924 2.33 1.076v.666z"
                      fill="#3E7BFA"
                    />
                  </svg>
                </span>
                <div>
                  <div>
                    text1
                  </div>
                  <div
                    class="meta"
                  >
                    text1
                     . 
                    vault1
                  </div>
                </div>
              </div>
              <span
                class="bp3-icon StyledProps--main iconCheck"
                data-icon="pipeline-approval"
              >
                <svg
                  height="16"
                  viewBox="0 0 19 17"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.81.669l.006.004.015.013a.5.5 0 01.062.7L6.479 16.375a.5.5 0 01-.709.062.52.52 0 01-.136-.176.523.523 0 01-.126-.095L.132 10.578a.5.5 0 01.005-.698l.017-.018a.5.5 0 01.707-.005l.007.007 5.233 5.367L18.107.735a.5.5 0 01.704-.066z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main applyButton bp3-popover-dismiss StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          entityReference.apply
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Secret Reference render with secret type text 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="searchBox"
      >
        <div
          class="TextInput--main search"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-icon bp3-icon-search StyledProps--main"
              icon="search"
            >
              <svg
                data-icon="search"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  search
                </desc>
                <path
                  d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <input
              class="bp3-input"
              placeholder="search"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="tabsContainer"
    >
      <div
        class="bp3-tabs bp3-vertical Tabs--main Tabs--vertical"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_selectScope_account"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="account"
            id="bp3-tab-title_selectScope_account"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--padding-medium"
            >
              <span
                class="bp3-icon bp3-icon-layers StyledProps--main iconMargin"
                icon="layers"
              >
                <svg
                  data-icon="layers"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    layers
                  </desc>
                  <path
                    d="M.55 4.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5a.998.998 0 00-.06-1.81L8.4.08a1.006 1.006 0 00-.79 0l-6.99 3a.992.992 0 00-.07 1.81zM15 10c-.16 0-.31.04-.45.11L8 13.38 1.45 10.1c-.14-.06-.29-.1-.45-.1-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1zm0-3.5c-.16 0-.31.04-.45.11L8 9.88 1.45 6.61A.997.997 0 001 6.5c-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              account
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_selectScope_account"
          class="bp3-tab-panel"
          id="bp3-tab-panel_selectScope_account"
          role="tabpanel"
        >
          <div
            class="referenceList"
          >
            <div
              class="listItem listItem"
            >
              <div
                class="item"
              >
                <span
                  class="bp3-icon StyledProps--main secretIcon"
                  data-icon="text"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 16 19"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.585 18.334H4.467v-.667c.371-.135 1.916-1.009 2.356-1.076V1.667H2.947L1.3 5.14H.667c-.051-.338 0-4.469 0-4.807h14.718c0 .338.05 4.452 0 4.807h-.658L13.13 1.667H9.255V16.59c.439.084 1.976.924 2.33 1.076v.666z"
                      fill="#3E7BFA"
                    />
                  </svg>
                </span>
                <div>
                  <div>
                    text1
                  </div>
                  <div
                    class="meta"
                  >
                    text1
                     . 
                    vault1
                  </div>
                </div>
              </div>
              <span
                class="bp3-icon StyledProps--main iconCheck"
                data-icon="pipeline-approval"
              >
                <svg
                  height="16"
                  viewBox="0 0 19 17"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.81.669l.006.004.015.013a.5.5 0 01.062.7L6.479 16.375a.5.5 0 01-.709.062.52.52 0 01-.136-.176.523.523 0 01-.126-.095L.132 10.578a.5.5 0 01.005-.698l.017-.018a.5.5 0 01.707-.005l.007.007 5.233 5.367L18.107.735a.5.5 0 01.704-.066z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main applyButton bp3-popover-dismiss StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          entityReference.apply
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Secret Reference render with spinner 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="searchBox"
      >
        <div
          class="TextInput--main search"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-icon bp3-icon-search StyledProps--main"
              icon="search"
            >
              <svg
                data-icon="search"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  search
                </desc>
                <path
                  d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <input
              class="bp3-input"
              placeholder="search"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-left-medium StyledProps--margin-right-xsmall"
          >
            secret.labelSecretType
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main selectButton StyledProps--inline Button--with-current-color Button--without-shadow"
                  style="width: 60px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secret.labelText
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tabsContainer"
    >
      <div
        class="bp3-tabs bp3-vertical Tabs--main Tabs--vertical"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_selectScope_account"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="account"
            id="bp3-tab-title_selectScope_account"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--padding-medium"
            >
              <span
                class="bp3-icon bp3-icon-layers StyledProps--main iconMargin"
                icon="layers"
              >
                <svg
                  data-icon="layers"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    layers
                  </desc>
                  <path
                    d="M.55 4.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5a.998.998 0 00-.06-1.81L8.4.08a1.006 1.006 0 00-.79 0l-6.99 3a.992.992 0 00-.07 1.81zM15 10c-.16 0-.31.04-.45.11L8 13.38 1.45 10.1c-.14-.06-.29-.1-.45-.1-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1zm0-3.5c-.16 0-.31.04-.45.11L8 9.88 1.45 6.61A.997.997 0 001 6.5c-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              account
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_selectScope_account"
          class="bp3-tab-panel"
          id="bp3-tab-panel_selectScope_account"
          role="tabpanel"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--padding-small"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 36 36"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                  stroke="currentColor"
                  stroke-dasharray="75,100"
                  stroke-linecap="round"
                  stroke-width="2.8"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main applyButton bp3-popover-dismiss StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          entityReference.apply
        </span>
      </button>
    </div>
  </div>
</div>
`;
